--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "node ./node_modules/vue-gh-pages/index.js"
   },
+  "homepage": "https://github.com/dayvidwhy/feeling-stacky",
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.5.16",
