--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint",
     "deploy": "node ./node_modules/vue-gh-pages/index.js"
   },
-  "homepage": "https://github.com/dayvidwhy/feeling-stacky",
+  "homepage": "git@github.com:dayvidwhy/feeling-stacky",
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.5.16",
