--- a/package.json
+++ b/package.json
@@ -37,29 +37,15 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
+  "engines": {
+    "node": "12.x"
   },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
+  "repository": {
+    "url": "https://github.com/dayvidwhy/feeling-stacky"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+  "license": "MIT",
+  "keywords": [
+    "vue"
   ],
   "homepage": "https://github.com/dayvidwhy/feeling-stacky"
 }
