--- a/package.json
+++ b/package.json
@@ -18,21 +18,22 @@
     "@babel/preset-env": "^7.15.0",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^4.2.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.17.0",
     "file-loader": "^6.1.0",
     "gh-pages": "^3.2.3",
-    "html-webpack-plugin": "^4.4.1",
+    "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^0.11.0",
     "postcss": "^7.0.32",
     "postcss-loader": "^3.0.0",
     "sass": "^1.38.2",
     "sass-loader": "^10.0.2",
+    "style-loader": "^3.2.1",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.1",
+    "webpack": "^5.53.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^4.0.0"
   },
